Base dice throwing objects added + small adjustment to readme and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="Online dice thrower app for rpg and strategy games">
       <link rel="canonical" href="http://vssr.nl/yesdice" />
       <style>     
-        body{margin:0;padding:0;background:#F3F3F3;font-family:sans-serif;}
+        body{margin:1em;padding:0;background:#F3F3F3;font-family:sans-serif;}
       </style>
   </head>
   <body>
