Added basic dice prototyping and a first d6 roll to console

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   	<script type="text/javascript" src="scripts/yesdice.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function(){
-            yesDice();
+            var d6 = new Dice();
+            d6.roll();
         });
     </script>
     </body>
